WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271323
NEW TEST(
276140@main
): [ MacOS WK1 Debug ] media/media-source/worker/media-managedmse-worker.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=271323
Summary
NEW TEST(276140@main): [ MacOS WK1 Debug ] media/media-source/worker/media-ma...
Jay Stfleur
Reported
2024-03-20 11:03:54 PDT
Description: media/media-source/worker/media-managedmse-worker.html Is a constant crash on wk1 Debug since
276140@main
History:
https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-source%2Fworker%2Fmedia-managedmse-worker.html
Diff/Image Diff/Crash Log: No crash log found for DumpRenderTree:77507. stdout: stderr: ASSERTION FAILED: canSafelyBeUsed() /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/WeakPtr.h(90) : T *WTF::WeakPtr<WebCore::MediaPlayerPrivateMediaSourceAVFObjC>::get() const [T = WebCore::MediaPlayerPrivateMediaSourceAVFObjC, WeakPtrImpl = WTF::DefaultWeakPtrImpl, PtrTraits = WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>]
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-20 11:04:30 PDT
<
rdar://problem/125100787
>
Jay Stfleur
Comment 2
2024-03-20 11:18:11 PDT
Reproducibility: run-webkit-tests -1 media/media-source/worker/media-managedmse-worker.html
Jean-Yves Avenard [:jya]
Comment 3
2024-03-21 03:12:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26236
EWS
Comment 4
2024-03-22 02:56:28 PDT
Committed
276534@main
(b7d8be7a8274): <
https://commits.webkit.org/276534@main
> Reviewed commits have been landed. Closing PR #26236 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug