Source/WebCore/Modules/mediasource/MediaSource.cpp
@@ -54,6 +54,8 @@
 #endif
 #include "MediaSourcePrivate.h"
 #include "MediaSourceRegistry.h"
+#include "MediaStrategy.h"
+#include "PlatformStrategies.h"
 #include "Quirks.h"
 #include "ScriptExecutionContext.h"
 #include "Settings.h"
@@ -1579,7 +1581,7 @@ bool MediaSource::enabledForContext(ScriptExecutionContext& context)
     UNUSED_PARAM(context);
 #if ENABLE(MEDIA_SOURCE_IN_WORKERS)
     if (context.isWorkerGlobalScope())
-        return context.settingsValues().mediaSourceInWorkerEnabled;
+        return context.settingsValues().mediaSourceInWorkerEnabled && platformStrategies()->mediaStrategy().hasThreadSafeMediaSourceSupport();
 #endif
 
     ASSERT(context.isDocument());
@@ -1601,7 +1603,7 @@ Ref<MediaSourceHandle> MediaSource::handle()
 
 bool MediaSource::canConstructInDedicatedWorker(ScriptExecutionContext& context)
 {
-    return context.settingsValues().mediaSourceInWorkerEnabled;
+    return context.settingsValues().mediaSourceInWorkerEnabled && platformStrategies()->mediaStrategy().hasThreadSafeMediaSourceSupport();
 }
 
 #endif
